# seminar_ros

./: Dockerfile  README.md
srv_pkg/: CMakeLists.txt  package.xml
srv_pkg/launch/: server_client.launch
srv_pkg/script/: client.py  server.py
topic_pkg/: CMakeLists.txt  package.xml
topic_pkg/launch/: talker_listener.launch
topic_pkg/script/: listener.py  talker.py
